# Khorjin

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ReadMe.txt  cmake_install.cmake  socket_linux.c
config/: stack_config.h  stack_config.h.cmake
examples/: CMakeLists.txt
examples/c37_118_Receiver/: CMakeLists.txt  c37_118_Receiver.c
src/: CMakeLists.txt
src/common/: lib_memory.c
src/common/inc/: lib_memory.h  libieeeC37_118_common_api.h  libieeeC37_118_platform_includes.h
src/ieeeC37_118/: ieeeC37_118.c  ieeeC37_118.h
src/pal/inc/: pal_socket.h  pal_thread.h  pal_time.h  platform_endian.h
src/pal/socket/linux/: socket_linux.c
src/pal/socket/win32/: socket_win32.c  socket_win32_1.c
src/pal/thread/linux/: thread_linux.c
src/pal/thread/win32/: thread_win32.c
src/pal/time/unix/: time.c
src/pal/time/win32/: time.c
src/vs/: libieeeC37_118.def
